# screenscribe

./: Cargo.toml  README.md
src/: main.rs  translate.py
