[package]
name = "screenscribe"
version = "0.1.0"
edition = "2021"

[dependencies]
screenshots = "0.8.10"       # Screen capture
leptess = "0.14.0"          # OCR with Tesseract
#reqwest = { version = "0.12", features = ["json"] }
#tokio = { version = "1", features = ["full"] } # Async runtime
image = "0.25.5"         # Image manipulation
#egui = "0.30.0"
#libc = "=0.2.169"
#chrono = "0.4.39" # GUI for overlays